# efected-coto-emmory

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  flake.nix  test_rhea.sh  test_svs.sh
benches/: a_benchmark.rs
docs/specs/: latest.json
handlers/: log.rs
src/: docs.rs  lib.rs  main.rs  settings.rs
src/extract/: json.rs
src/handlers/: my.rs
src/middleware/: logging.rs  reqwest_retry.rs
src/routes/: health.rs
src/snapshots/: efected_coto_emmory__data__tests__foo.snap.new
src/test_utils/: rvg.rs
src/tracing_layers/: format_layer.rs
tests/: integration_test.rs
