[package]
name = "efected-cotoemory"
version = "0.1.0"
edition = "2021"
description = "a web service"
repository = "https://github.com/aleeusgr/efected-cotoemory"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
